--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
-    "start": "node dist/index.js",
-    "dev": "tsx watch -r tsconfig-paths/register src/index.ts",
+    "start": "NODE_ENV=production node dist/src/index.js",
+    "dev": "NODE_ENV=development tsx watch -r tsconfig-paths/register src/index.ts",
     "prepare": "husky",
     "precommit": "lint-staged",
     "lint": "eslint .",
@@ -19,8 +19,11 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "pino": "^9.5.0",
+    "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
